src/core/css/panel/media-product.css
.fg-media-product, .fg-media-product * {
    box-sizing: border-box;
}
.fg-media-product {
    position: relative;
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
    font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.4;
}
.fg-media-product-inner {
    position: relative;
    width: 100%;
    height: 100%;
    padding: 10px;
    display: flex;
    flex-direction: column;
    transition: opacity 0.3ms ease-in-out, visibility 0.3ms ease-in-out;
    opacity: 0;
    visibility: hidden;
}
.fg-media-product.fg-loaded .fg-media-product-inner {
    opacity: 1;
    visibility: visible;
}
.fg-media-product-header {
    min-height: 32px;
    width: 100%;
    line-height: 22px;
    padding: 0 10px 10px;
    font-weight: 600;
    font-size: large;
}
.fg-media-product-body {
    max-height: 100%;
    width: 100%;
    border-style: solid;
    border-width: 0;
    border-top-width: 1px;
    border-bottom-width: 1px;
    padding: 10px;
    overflow: auto;
}
.fg-media-product-body h2 {
    font-size: large;
    font-weight: 600;
    margin: 10px 0;
}
.fg-media-product-body p {
    font-size: inherit;
    font-weight: normal;
    margin: 10px 0;
}
.fg-media-product-body table {
    width: 100%;
    border-collapse: collapse;
    border-spacing: 0;
    margin: 0;
    text-align: center;
}
.fg-media-product-body table > thead > tr > th,
.fg-media-product-body table > tbody > tr > td {
    padding: 2px;
    background-color: transparent!important;
}
.fg-media-product-body table > thead > tr > th:last-child,
.fg-media-product-body table > tbody > tr > td:last-child {
    text-align: right;
}

.fg-media-product-body table > tbody > tr > td del {
    opacity: 0.5;
}
.fg-media-product-body table > tbody > tr > td ins {
    text-decoration: none;
}
.fg-media-product-footer {
    min-height: 42px;
    padding: 10px;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
}
.fg-media-product-footer .fg-panel-button {
    margin: 0 0 3px 0;
    border-width: 1px;
    border-radius: 3px;
    height: 32px;
    line-height: 32px;
    text-align: center;
}
.fg-media-product-footer p {
    margin: 7px 3px 0;
    text-align: center;
}

